--- a/website/docs/cloud-docs/api-docs/workspaces.mdx
+++ b/website/docs/cloud-docs/api-docs/workspaces.mdx
@@ -71,7 +71,8 @@ By supplying the necessary attributes under a `vcs-repository` object, you can c
 | `data.attributes.agent-pool-id`               | string  | (nothing) | Required when `execution-mode` is set to `agent`. The ID of the agent pool belonging to the workspace's organization. This value must not be specified if `execution-mode` is set to `remote` or `local` or if `operations` is set to `true`.                                                                                                                                                                                                                                                                   |
 | `data.attributes.allow-destroy-plan`          | boolean | `true`    | Whether destroy plans can be queued on the workspace.                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | `data.attributes.assessments-enabled`         | boolean | `false`   | (previously `drift-detection`) Whether or not Terraform Cloud performs health assessments for the workspace. May be overriden by the organization setting `assessments-enforced`. Only available for Plus tier organizations, in workspaces running Terraform version 0.15.4+ and operating in [Remote execution mode](/terraform/cloud-docs/workspaces/settings#execution-mode).                                                                                              |
-| `data.attributes.auto-apply`                  | boolean | `false`   | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply).                                                                                                                                                                                                                                                                                                                                                |
+| `data.attributes.auto-apply`                  | boolean | `false`   | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) in runs initiated by VCS, UI or CLI.                                                                                                                                                                                                                                                                                                      |
+| `data.attributes.auto-apply-run-trigger`      | boolean | `false`   | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) in runs initiated by run triggers.                                                                                                                                                                                                                                                                                                    |
 | `data.attributes.description`                 | string  | (nothing) | A description for the workspace.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
 | `data.attributes.execution-mode`              | string  | `remote`  | Which [execution mode](/terraform/cloud-docs/workspaces/settings#execution-mode) to use. Valid values are `remote`, `local`, and `agent`. When set to `local`, the workspace will be used for state storage only. This value must not be specified if `operations` is specified.                                                                                                                                                                                                                                          |
 | `data.attributes.file-triggers-enabled`       | boolean | `true`    | Whether to filter runs based on the changed files in a VCS push. If enabled, it uses either `trigger-prefixes` in conjunction with `working_directory` or `trigger-patterns` to describe the set of changed files that will start a run. If disabled, any push will trigger a run.                                                                                                                                                                                                                              |
@@ -277,6 +278,7 @@ _Without a VCS repository_
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T21:22:49.566Z",
       "description": null,
@@ -390,6 +392,7 @@ _With a VCS repository_
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T21:50:58.726Z",
       "description": null,
@@ -507,6 +510,7 @@ _With a project_
     "attributes": {
       "allow-destroy-plan": true,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2022-12-05T20:57:13.829Z",
       "environment": "default",
@@ -648,7 +652,8 @@ Properties without a default value are required.
 | `data.attributes.agent-pool-id`               | string         | (previous value) | Required when `execution-mode` is set to `agent`. The ID of the agent pool belonging to the workspace's organization. This value must not be specified if `execution-mode` is set to `remote` or `local` or if `operations` is set to `true`.                                                                                                                                                                      |
 | `data.attributes.allow-destroy-plan`          | boolean        | (previous value) | Whether destroy plans can be queued on the workspace.                                                                                                                                                                                                                                                                                                                                                              |
 | `data.attributes.assessments-enabled`         | boolean        | `false`          | (previously `drift-detection`) Whether or not Terraform Cloud performs health assessments for the workspace. May be overriden by the organization setting `assessments-enforced`. Only available for Plus tier organizations, in workspaces running Terraform version 0.15.4+ and operating in [Remote execution mode](/terraform/cloud-docs/workspaces/settings#execution-mode).  |
-| `data.attributes.auto-apply`                  | boolean        | (previous value) | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply).                                                                                                                                                                                                                                                   |
+| `data.attributes.auto-apply`                  | boolean        | `false`          | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) in runs initiated by VCS, UI or CLI.                                                                                                                                                                                                                                                                                                      |
+| `data.attributes.auto-apply-run-trigger`      | boolean        | `false`          | Whether to automatically apply changes when a Terraform plan is successful, [with some exceptions](/terraform/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) in runs initiated by run triggers.                                                                                                                                                                                                                                                                                                    |
 | `data.attributes.description`                 | string         | (previous value) | A description for the workspace.                                                                                                                                                                                                                                                                                                                                                                                   |
 | `data.attributes.execution-mode`              | string         | (previous value) | Which [execution mode](/terraform/cloud-docs/workspaces/settings#execution-mode) to use. Valid values are `remote`, `local`, and `agent`. When set to `local`, the workspace will be used for state storage only. This value must not be specified if `operations` is specified.                                                                                                                                             |
 | `data.attributes.file-triggers-enabled`       | boolean        | (previous value) | Whether to filter runs based on the changed files in a VCS push. If enabled, it uses either `trigger-prefixes` in conjunction with `working_directory` or `trigger-patterns` to describe the set of changed files that will start a run. If disabled, any push will trigger a run.                                                                                                                                 |
@@ -723,6 +728,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T21:50:58.726Z",
       "description": null,
@@ -885,6 +891,7 @@ $ curl \
         "allow-destroy-plan": true,
         "apply-duration-average": null,
         "auto-apply": false,
+        "auto-apply-run-trigger": false,
         "auto-destroy-at": null,
         "created-at": "2021-08-16T21:50:58.726Z",
         "description": null,
@@ -999,6 +1006,7 @@ $ curl \
         "allow-destroy-plan": true,
         "apply-duration-average": null,
         "auto-apply": false,
+        "auto-apply-run-trigger": false,
         "auto-destroy-at": null,
         "created-at": "2021-08-16T21:22:49.566Z",
         "description": null,
@@ -1147,6 +1155,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": 158000,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-06-03T17:50:20.307Z",
       "description": "An example workspace for documentation.",
@@ -1394,6 +1403,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T19:44:45.241Z",
       "description": "Example workspace for documentation.",
@@ -1565,6 +1575,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T19:44:45.241Z",
       "description": "Example workspace for documentation.",
@@ -1727,6 +1738,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T19:44:45.241Z",
       "description": "Example workspace for documentation.",
@@ -1908,6 +1920,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T19:44:45.241Z",
       "description": "Example workspace for documentation.",
@@ -2098,6 +2111,7 @@ $ curl \
       "allow-destroy-plan": true,
       "apply-duration-average": null,
       "auto-apply": false,
+      "auto-apply-run-trigger": false,
       "auto-destroy-at": null,
       "created-at": "2021-08-16T19:44:45.241Z",
       "description": "Example workspace for documentation.",
@@ -2269,6 +2283,7 @@ $ curl \
         "allow-destroy-plan": true,
         "apply-duration-average": null,
         "auto-apply": false,
+        "auto-apply-run-trigger": false,
         "auto-destroy-at": null,
         "created-at": "2021-08-16T21:50:58.726Z",
         "description": null,
