List module tests generation as an org setting

--- a/website/docs/cloud-docs/users-teams-organizations/organizations.mdx
+++ b/website/docs/cloud-docs/users-teams-organizations/organizations.mdx
@@ -182,6 +182,10 @@ Refer to [Managing Policy Sets](/terraform/cloud-docs/policy-enforcement/manage-
 
 Manage the run tasks that you can add to workspaces within the organization. [Run tasks](/terraform/cloud-docs/workspaces/settings/run-tasks) let you integrate third-party tools and services at specific stages in the Terraform Cloud run lifecycle.
 
+#### Module Tests Generation (Beta)
+
+Enable module tests generation for your organization. Module test generation allows you to quickly generate Terraform tests for a private registry module. To generate module tests, your organization must be on a Terraform Business or Plus subscription and you must have [permission to manage registry modules](/terraform/cloud-docs/users-teams-organizations/permissions#organization-permissions)
+
 ### Security
 
 #### Agents
